<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_PIP" Id="{3e94e806-a651-479f-afb3-d6455fe7a8d1}">
    <Declaration><![CDATA[TYPE ST_PIP :
STRUCT
(* Read back *)
// 	i_xHVisON : BOOL; 
	
(* Interlock *)
	{attribute 'pytmc' := '
    pv: ILK_OK;
	field: ZNAM NOT OK ;
	field: ONAM OK ;
	io: i;
	'}
   	xHV_ExtIlk : BOOL; 
	{attribute 'pytmc' := '
	pv: AT_VAC_SP;
	field: ZNAM FALSE; 
	field: ONAM TRUE;
	io: io;
	'}
	rHVEna_SP : REAL := 1.0E-4;	
	
(* EPICS Controls *)	
	{attribute 'pytmc' := '
    pv: HV_SW;
	io: io;
	field: ZNAM OFF; 
	field: ONAM ON;
    '}
	xHVEna_SW : BOOL; 
	
(* IO Controls *)
	{attribute 'pytmc' := '
    pv: HV_DO;
	field: ZNAM FALSE; 
	field: ONAM TRUE;
	io: i;
    '}
	q_xHVEna_DO : BOOL;	// Enable High Voltage when True // 'TcLinkTo' (EL1124) ^Input
	{attribute 'pytmc' := '
    pv: PRESS;
	field: HOPR 1000
	field: LOPR 0
	field: PREC 2
	field: EGU "TORR"
	io: i;
    '}
	rPRESS: REAL;  //
	{attribute 'pytmc' := '
    pv: PRESS_AI;
	io: i;
    '}
	i_iPRESS: REAL;  //
	{attribute 'pytmc' := '
    pv: SP_DI;
	field: ZNAM FALSE; 
	field: ONAM TRUE;
	io:i;
    '}
	i_xSP_DI : BOOL; // NO contact // 'TcLinkTo' (EL1004) ^Input



END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>